# RESpecTa

./: CMakeLists.txt  Controller.cpp  Controller.h  Coordinates.h  EmptyGenForSetNode.h  EmptyGenNode.h  GetSensorNode.h  GlobalVariables.h  Graph.h  GraphFunctions.cpp  GraphFunctions.h  InitiateSensorNode.h  Model.cpp  Model.h  Pose.h  RESpecTa.pro  Robot.h  RobotSet.h  RunGenNode.h  StateEditDialog.cpp  StateEditDialog.h  StateTypeWidgets.cpp  StateTypeWidgets.h  States.cpp  States.h  StopGenNode.h  SysInitNode.h  TransDialog.cpp  TransDialog.h  Transition.cpp  Transition.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  WaitNode.h  arrow.cpp  arrow.h  baseState.cpp  baseState.h  (+29 more)
RESpecTa-build-desktop/: Makefile  RESpecTa  moc_StateEditDialog.cpp  moc_StateTypeWidgets.cpp  moc_diagramscene.cpp  moc_editWidget.cpp  moc_respecta.cpp  moc_stateWidget.cpp  moc_transWidget.cpp  qrc_diagramscene.cpp  ui_respecta.h
doc/: README
